# makara_test

makara/: License.md  README.md
makara/control_stack/synchronizer/: CMakeLists.txt
makara/control_stack/synchronizer/msg/: syncdata.msg
makara/control_stack/synchronizer/src/: synchronizer.cpp
makara/drivers_stack/: README.md
makara/hardware_stack/: README.md
makara/hardware_stack/serialnode/: CMakeLists.txt  package.xml
makara/hardware_stack/serialnode/src/: serialnode.cpp
makara/hardware_stack/vectornav/: CMakeLists.txt  package.xml
makara/hardware_stack/vectornav/include/vectornav/: vector.h
makara/hardware_stack/vectornav/msg/: vectornav.msg
makara/hardware_stack/vectornav/src/: vectornav.cpp
makara/mission_stack/debugger/: CMakeLists.txt  README.md  package.xml
makara/mission_stack/debugger/include/debugger/: log_tools.h  mainwindow.h
makara/mission_stack/debugger/src/: main.cpp  mainwindow.cpp
makara/mission_stack/debugger/ui/: debugger.pro  mainwindow.ui
makara/navigation_stack/: README.md
makara/vision_stack/: README.md
